# flux-weighted-impact-parameters

./: .gitignore  README.md  pyproject.toml
examples/: README.md
notebooks/: README.md  example_notebook_on_SGASJ1226.ipynb
scripts/: README.md
src/flux_weighted_impact_parameters/: __init__.py  azimuthal_angle_map.py  binned_pixel_stats.py  correlation.py  fitting.py  flux_contribution_maps.py  impact_parameter_distribution.py  impact_parameter_map.py  lensing.py  make_segmentation_mask.py  mc_uncertainty_pipeline.py  plot_utils.py  rebinning.py  segmentation.py  segmentation_utils.py  simulation.py  stats_utils.py  utils.py
